Create Micropost resources

--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -18,12 +18,7 @@
 
   <div class="field">
     <%= form.label :user__id %>
-    <%= form.text_field :user__id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :integer %>
-    <%= form.text_field :integer %>
+    <%= form.number_field :user__id %>
   </div>
 
   <div class="actions">
